# Personal-Co-worker

./: app.py  pyproject.toml  requirements.txt  sidekick.py  sidekick_tools.py
